Enable quit button, connect label to quotes array

--- a/Countdown/DisplayViewController.xib
+++ b/Countdown/DisplayViewController.xib
@@ -23,6 +23,9 @@
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
+                    <connections>
+                        <action selector="quitController:" target="-2" id="6CQ-4n-QRC"/>
+                    </connections>
                 </button>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="KkH-EK-PMZ">
                     <rect key="frame" x="18" y="65" width="296" height="34"/>
