--- a/Countdown/DisplayViewController.xib
+++ b/Countdown/DisplayViewController.xib
@@ -15,12 +15,12 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="332" height="146"/>
+            <rect key="frame" x="0.0" y="0.0" width="332" height="227"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="m0q-PZ-2a6">
-                    <rect key="frame" x="97" y="27" width="138" height="32"/>
-                    <buttonCell key="cell" type="push" title="Quit Countdown" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ul8-hR-JO4">
+                    <rect key="frame" x="133" y="42" width="66" height="32"/>
+                    <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ul8-hR-JO4">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
                     </buttonCell>
@@ -28,18 +28,21 @@
                         <action selector="quitController:" target="-2" id="6CQ-4n-QRC"/>
                     </connections>
                 </button>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="KkH-EK-PMZ">
-                    <rect key="frame" x="18" y="65" width="296" height="34"/>
-                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="&quot;They are dealing with the unimaginable&quot; - It's Quiet Uptown" id="VJx-pA-KZr">
-                        <font key="font" metaFont="system"/>
+                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ypg-eX-tMn">
+                    <rect key="frame" x="125" y="190" width="83" height="17"/>
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="wait for it..." id="vvq-va-8Zz">
+                        <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ypg-eX-tMn">
-                    <rect key="frame" x="129" y="109" width="75" height="17"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="thinking..." id="vvq-va-8Zz">
-                        <font key="font" metaFont="systemBold"/>
+                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="KkH-EK-PMZ">
+                    <rect key="frame" x="18" y="80" width="296" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="LvT-zK-FMc"/>
+                    </constraints>
+                    <textFieldCell key="cell" sendsActionOnEndEditing="YES" alignment="center" title="&quot;They are dealing with the unimaginable&quot; - It's Quiet Uptown" id="VJx-pA-KZr">
+                        <font key="font" metaFont="system"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
@@ -54,7 +57,7 @@
                 <constraint firstItem="m0q-PZ-2a6" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="mYH-DW-5xa"/>
                 <constraint firstItem="KkH-EK-PMZ" firstAttribute="top" secondItem="Ypg-eX-tMn" secondAttribute="bottom" constant="10" id="yDG-3m-qMw"/>
             </constraints>
-            <point key="canvasLocation" x="286" y="249"/>
+            <point key="canvasLocation" x="286" y="289.5"/>
         </customView>
     </objects>
 </document>
