--- a/Countdown/DisplayViewController.xib
+++ b/Countdown/DisplayViewController.xib
@@ -46,6 +46,16 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
+                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="szH-ba-Sif">
+                    <rect key="frame" x="251" y="5" width="67" height="32"/>
+                    <buttonCell key="cell" type="push" title="date" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Pmk-ie-BEi">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="changeDate:" target="-2" id="Slr-D7-tVs"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="m0q-PZ-2a6" firstAttribute="top" secondItem="KkH-EK-PMZ" secondAttribute="bottom" constant="10" id="00h-eZ-d6y"/>
@@ -56,7 +66,7 @@
                 <constraint firstItem="m0q-PZ-2a6" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="mYH-DW-5xa"/>
                 <constraint firstItem="KkH-EK-PMZ" firstAttribute="top" secondItem="Ypg-eX-tMn" secondAttribute="bottom" constant="10" id="yDG-3m-qMw"/>
             </constraints>
-            <point key="canvasLocation" x="286" y="271"/>
+            <point key="canvasLocation" x="272" y="163"/>
         </customView>
     </objects>
 </document>
