--- a/Countdown/DisplayViewController.xib
+++ b/Countdown/DisplayViewController.xib
@@ -14,21 +14,11 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="332" height="190"/>
+            <rect key="frame" x="0.0" y="0.0" width="332" height="198"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="m0q-PZ-2a6">
-                    <rect key="frame" x="133" y="5" width="66" height="32"/>
-                    <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ul8-hR-JO4">
-                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" metaFont="system"/>
-                    </buttonCell>
-                    <connections>
-                        <action selector="quitController:" target="-2" id="6CQ-4n-QRC"/>
-                    </connections>
-                </button>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Ypg-eX-tMn">
-                    <rect key="frame" x="125" y="153" width="83" height="17"/>
+                    <rect key="frame" x="125" y="161" width="83" height="17"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="wait for it..." id="vvq-va-8Zz">
                         <font key="font" metaFont="systemBold"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -36,7 +26,7 @@
                     </textFieldCell>
                 </textField>
                 <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="KkH-EK-PMZ">
-                    <rect key="frame" x="18" y="43" width="296" height="100"/>
+                    <rect key="frame" x="18" y="51" width="296" height="100"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="100" id="LvT-zK-FMc"/>
                     </constraints>
@@ -46,8 +36,8 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="szH-ba-Sif">
-                    <rect key="frame" x="251" y="5" width="67" height="32"/>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="szH-ba-Sif">
+                    <rect key="frame" x="251" y="13" width="67" height="32"/>
                     <buttonCell key="cell" type="push" title="date" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Pmk-ie-BEi">
                         <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                         <font key="font" metaFont="system"/>
@@ -56,14 +46,28 @@
                         <action selector="changeDate:" target="-2" id="Slr-D7-tVs"/>
                     </connections>
                 </button>
+                <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="m0q-PZ-2a6">
+                    <rect key="frame" x="14" y="13" width="66" height="32"/>
+                    <buttonCell key="cell" type="push" title="Quit" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Ul8-hR-JO4">
+                        <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                        <font key="font" metaFont="system"/>
+                    </buttonCell>
+                    <connections>
+                        <action selector="quitController:" target="-2" id="6CQ-4n-QRC"/>
+                    </connections>
+                </button>
             </subviews>
             <constraints>
                 <constraint firstItem="m0q-PZ-2a6" firstAttribute="top" secondItem="KkH-EK-PMZ" secondAttribute="bottom" constant="10" id="00h-eZ-d6y"/>
                 <constraint firstItem="Ypg-eX-tMn" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="8UZ-BM-iax"/>
+                <constraint firstAttribute="trailing" secondItem="szH-ba-Sif" secondAttribute="trailing" constant="20" id="ANR-ti-YGk"/>
+                <constraint firstAttribute="bottom" secondItem="szH-ba-Sif" secondAttribute="bottom" constant="20" id="GvS-qn-C87"/>
                 <constraint firstItem="Ypg-eX-tMn" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" constant="20" id="RkM-Ta-AsZ"/>
                 <constraint firstAttribute="trailing" secondItem="KkH-EK-PMZ" secondAttribute="trailing" constant="20" id="U2F-pt-dKT"/>
+                <constraint firstAttribute="bottom" secondItem="m0q-PZ-2a6" secondAttribute="bottom" constant="20" id="Zsm-cd-8a7"/>
+                <constraint firstItem="m0q-PZ-2a6" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="h2T-Ju-5Gh"/>
                 <constraint firstItem="KkH-EK-PMZ" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" constant="20" id="l0a-P2-YDL"/>
-                <constraint firstItem="m0q-PZ-2a6" firstAttribute="centerX" secondItem="Hz6-mo-xeY" secondAttribute="centerX" id="mYH-DW-5xa"/>
+                <constraint firstItem="szH-ba-Sif" firstAttribute="top" secondItem="KkH-EK-PMZ" secondAttribute="bottom" constant="10" id="mIV-eI-qhK"/>
                 <constraint firstItem="KkH-EK-PMZ" firstAttribute="top" secondItem="Ypg-eX-tMn" secondAttribute="bottom" constant="10" id="yDG-3m-qMw"/>
             </constraints>
             <point key="canvasLocation" x="272" y="163"/>
